--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
             <div id="message">
             </div>
           </div>
-          <center><h1>Contact Us</h1></center><br />
+          <strong><center><h1>Contact Us</h1></center><br />
           <h2>Thank you for your interest in SVVVIMUN. Our team is always available and happy to help with<br/> any questions relating to our conference. We also welcome suggestions for improving SVVVIMUN.</p>
-        	<p>We look forward to hearing from you!</h2><br /><br /><br />
+        	<p>We look forward to hearing from you!</h2><br /><br /><br /></strong>
           <div onclick="keycontacts()" class="key-contacts">
             <h2>Key Contacts</h2>
           </div>
