--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>SVVVMUN | Home</title>
       <link rel="stylesheet" href="css/index.css" media="screen" title="no title" charset="utf-8">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
@@ -14,13 +12,13 @@
         <div class="fixed-width">
           <a id="nav-logo" href="index.html"><img src="svvvlogo.png" alt="SVVV MUN" height="50px" width="50px"></a>
           <nav id="nav-1">
-              <li class="nav-link"><a class="link-3" href="index.html">Home</a></li>
-              <li class="nav-link"><a class="link-3" href="about.html">About Us</a></li>
-              <li class="nav-link"><a class="link-3" href="messages.html">Messages</a></li>
-              <li class="nav-link"><a class="link-3" href="#apply">Apply</a></li>
-              <li class="nav-link"><a class="link-3" href="committees.html">Committees</a></li>
-              <li class="nav-link"><a class="link-3" href="resources.html">Resources</a></li>
-              <li class="nav-link"><a class="link-3" href="contact.html">Contact Us</a></li>
+            <a class="link-3" href="index.html"><li class="nav-link active">Home</li></a>
+            <a class="link-3" href="about.html"><li class="nav-link">About Us</li></a>
+            <a class="link-3" href="messages.html"><li class="nav-link">Messages</li></a>
+            <a class="link-3" href="index.html#apply"><li class="nav-link">Apply</li></a>
+            <a class="link-3" href="committees.html"><li class="nav-link">Committees</li></a>
+            <a class="link-3" href="resources.html"><li class="nav-link">Resources</li></a>
+            <a class="link-3" href="contact.html"><li class="nav-link">Contact Us</li></a>
           </nav>
         </div>
       </header>
@@ -39,9 +37,7 @@
       <div class="container-2">
         <div class="container-2-fixed-width">
           <div class="inform-MUN">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet finibus ligula. Nulla facilisis urna quis vulputate pharetra. Proin sollicitudin ipsum neque. Pellentesque diam mi, sollicitudin nec gravida ac, ultricies ut ante. Nunc eros metus, sollicitudin sit amet orci ut, suscipit vestibulum velit. Aliquam id tellus et neque molestie eleifend in ut elit. Aenean id efficitur neque. Nunc consectetur tincidunt nisl sit amet elementum. Praesent fringilla in neque non pharetra. Pellentesque aliquet purus quis vestibulum ullamcorper. Nam vitae interdum neque.<br />
-
-          In lobortis lacinia gravida. Nunc convallis sapien eget tincidunt posuere. Nunc ligula risus, egestas eu lorem a, pellentesque rutrum magna. Sed et euismod elit. Donec in arcu ut nisi molestie elementum. Nullam augue eros, mattis et laoreet eu, viverra vel ante. Duis ultrices ante est, id volutpat magna rutrum et. Nulla non risus nisi. Maecenas finibus mattis arcu eget mattis. Pellentesque iaculis gravida sem, sed malesuada tellus sodales posuere.
+            <h1>We bring to you..<br />An experience worth experiencing..<br />An amalgum of extravagantly ingenious minds..<br />And a conference worth being a part of!</h1>
         </div>
         </div>
       </div>
@@ -58,7 +54,7 @@
               I am honoured to invite you to apply to the debut edition of Shri Vaishnav Vidhyapeeth Vishwavidyalaya  International Model United Nations, SVVVIMUN 2016 to be held from Friday, October 21st, to Sunday, October 23, 2016 at Shri Vaishnav Vidhyapeeth Vishwavidyalaya, Indore, Madhya Pradesh.
             </p>
             <p>
-              A Model United Nation conference is one of it's kinds and what  helps to set a platform which helps to open the doors of international reconnection and association for the future generations who are ready to step in to the corridors of diplomacy and seize the moment to work towards becoming responsible leaders of the feature. The wide range of topics and committees will further ensure a uniquely engaging and thought-provoking experience for each and every delegate.
+              A Model United Nation conference is one of it's kind and what  helps to set a platform which helps to open the doors of international reconnection and association for the future generations who are ready to step in to the corridors of diplomacy and seize the moment to work towards becoming responsible leaders of the feature. The wide range of topics and committees will further ensure a uniquely engaging and thought-provoking experience for each and every delegate.
             </p>
             <p>
               Dear Prospective Delegates, I Very Strongly recommend  you to take full advantages of the opportunity brought forward by SVVVIMUN 2016. I encourage you to be creative, test the limits of current international relations, while remaining realistic, learn as much as you can from this experience and bear those lessons in mind when entrusted with real decision making power in your future careers.
