--- a/messages.html
+++ b/messages.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>SVVVMUN | Messages</title>
       <link rel="stylesheet" href="css/messages.css" media="screen" title="no title" charset="utf-8">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
@@ -15,13 +13,13 @@
         <div class="fixed-width">
           <a id="nav-logo" href="index.html"><img src="svvvlogo.png" alt="SVVV MUN" height="50px" width="50px"></a>
           <nav id="nav-1">
-              <li class="nav-link"><a class="link-3" href="index.html">Home</a></li>
-              <li class="nav-link"><a class="link-3" href="about.html">About Us</a></li>
-              <li class="nav-link"><a class="link-3" href="">Messages</a></li>
-              <li class="nav-link"><a class="link-3" href="index.html#apply">Apply</a></li>
-              <li class="nav-link"><a class="link-3" href="committees.html">Committees</a></li>
-              <li class="nav-link"><a class="link-3" href="resources.html">Resources</a></li>
-              <li class="nav-link"><a class="link-3" href="contact.html">Contact Us</a></li>
+              <a class="link-3" href="index.html"><li class="nav-link">Home</li></a>
+              <a class="link-3" href="about.html"><li class="nav-link">About Us</li></a>
+              <a class="link-3" href="messages.html"><li class="nav-link active">Messages</li></a>
+              <a class="link-3" href="index.html#apply"><li class="nav-link">Apply</li></a>
+              <a class="link-3" href="committees.html"><li class="nav-link">Committees</li></a>
+              <a class="link-3" href="resources.html"><li class="nav-link">Resources</li></a>
+              <a class="link-3" href="contact.html"><li class="nav-link">Contact Us</li></a>
           </nav>
         </div>
       </header>
