--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <h3>UNHCR</h3>
             </div>
             <div class="committees-logo">
-              <img class="committess-logo-image" src="images/UNIDO.png" alt="SVVV MUN" />
+              <img class="committess-logo-image" src="images/unido.png" alt="SVVV MUN" />
               <h3>UNIDO</h3>
             </div>
             <div class="committees-logo">
