--- a/committees.html
+++ b/committees.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>SVVVMUN | Committees</title>
-      <link rel="stylesheet" href="css/committees.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/committees.css">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
       <script type="text/javascript" src="js/committees.js"></script>
