--- a/messages.html
+++ b/messages.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>SVVVMUN | Messages</title>
-      <link rel="stylesheet" href="css/messages.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/messages.css">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
       <script src="js/messages.js" type="text/javascript"></script>
