--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>SVVVMUN | Resources</title>
-      <link rel="stylesheet" href="css/resources.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/resources.css">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
     </head>
