--- a/committees.html
+++ b/committees.html
@@ -17,7 +17,7 @@
             <a class="link-3" href="about.html"><li class="nav-link">About Us</li></a>
             <a class="link-3" href="messages.html"><li class="nav-link">Messages</li></a>
             <a class="link-3" href="index.html#apply"><li class="nav-link">Apply</li></a>
-            <a class="link-3" href="committees.html"><li class="nav-link active">Committees</li></a>
+            <a class="link-3" href="committees.html"><li class="nav-link active committees-nav-link">Committees</li></a>
             <a class="link-3" href="resources.html"><li class="nav-link">Resources</li></a>
             <a class="link-3" href="contact.html"><li class="nav-link">Contact Us</li></a>
           </nav>
