--- a/messages.html
+++ b/messages.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>SVVVMUN | Messages</title>
+      <meta name="author" content="Utkarsh Malviya" />
       <link rel="stylesheet" href="css/messages.css">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
@@ -32,7 +33,7 @@
           <div onclick='messageConvener()' class="messageConvener hover">
             <h1>Message from the desk of Convener</h1>
           </div>
-          <div onclick='messageFaculty()' class="messageFaculty hover">
+          <div onclick='messageFaculty()' class="messageFaculty two hover">
             <h1>Message from the desk of Faculty Advisor</h1>
           </div>
           <div id="messageContainer">
