--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>SVVVMUN | Home</title>
+      <meta name="author" content="Utkarsh Malviya" />
       <link rel="stylesheet" href="css/index.css">
       <link rel="icon" href="favicon.ico?" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
